--- a/index.html
+++ b/index.html
@@ -16,9 +16,30 @@
 
 <body>
 
-  
+  <header>
+
+    <h1>Fun Bus</h1>
+
+    <nav>
+      <a href="#"> Home </a>
+      <a href="#"> About </a>
+      <a href="#"> Blog </a>
+      <a href="#"> Contact </a>
+    </nav>
+
+  </header>
+
      
   <div class="container home">
+
+    <section class="title">
+
+      <img class="funBus" src="img/fun-bus.jpg">
+
+      <h2>Welcome to Fun Bus! </h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et deleniti sit aperiam, amet sint ipsam voluptas nesciunt, quaerat nisi incidunt error ut nihil neque ex tenetur nemo aut, adipisci eos?</p>
+
+    </section>
    
     <section class="content-section">
       <div class="text-content">
